@startuml PresenceClasses

skinparam classAttributeIconSize 0

package "presence/domain" {
  class IdentityPresence {
    - identityId: IdentityId
    - ownerNodeId: NodeId
    - preference: IdentityPresencePreference
    - status: PresenceStatus
    - lastHeartbeatAt: Timestamp
    - lastActivityAt: Timestamp
    - updatedAt: Timestamp
    + recordHeartbeat(activityDetected, networkIds)
    + update(status, customMessage, networkIds)
    + clearCustomMessage(networkIds)
    + refreshDerivedStatus(networkIds)
  }

  class IdentityPresencePreference {
    - selectedStatus: PresenceStatus
    - customMessage: PresenceCustomMessage
    - updatedAt: Timestamp
  }

  class PresenceStatus {
    + available
    + away
    + busy
    + custom
    + disconnected
    + invisible
    + visibleForOthers()
  }

  class PresenceCustomMessage {
    + maxLength: 50
  }

  class IdentityPresenceWasUpdatedEvent {
    + EVENT_NAME: presence.v1.identity_presence.was_updated
  }
}

package "presence/application" {
  class IdentityPresenceFinder
  class IdentityPresenceUpdater
  class IdentityPresenceHeartbeatRecorder
  class IdentityPresenceExpirationRegistrar
}

package "presence/application/resolve-network" {
  class IdentityPresenceNetworkResolver
}

package "identities/application" {
  class IdentityNetworksFinder
}

package "presence/infrastructure" {
  class InMemoryIdentityPresenceRepository
}

IdentityPresence --> PresenceStatus
IdentityPresence --> IdentityPresencePreference
IdentityPresencePreference --> PresenceStatus
IdentityPresencePreference --> PresenceCustomMessage
IdentityPresence --> IdentityPresenceWasUpdatedEvent
IdentityPresenceFinder --> InMemoryIdentityPresenceRepository
IdentityPresenceUpdater --> InMemoryIdentityPresenceRepository
IdentityPresenceUpdater --> IdentityPresenceNetworkResolver
IdentityPresenceHeartbeatRecorder --> InMemoryIdentityPresenceRepository
IdentityPresenceHeartbeatRecorder --> IdentityPresenceNetworkResolver
IdentityPresenceExpirationRegistrar --> InMemoryIdentityPresenceRepository
IdentityPresenceExpirationRegistrar --> IdentityPresenceNetworkResolver
IdentityPresenceNetworkResolver --> IdentityNetworksFinder

@enduml
